# ledger-posting-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose-adminer.yml  docker-compose.yml
.github/workflows/: rust-ci.yml
docker/mariadb-init/: 01-grant-privileges.sql
docs/: architecture.md
postings-api/: Cargo.toml
postings-api/src/: lib.rs
postings-api/src/domain/: account_category.rs  account_stmt.rs  balance_side.rs  chart_of_account.rs  financial_stmt.rs  hash_record.rs  ledger.rs  ledger_account.rs  ledger_stmt.rs  mod.rs  named.rs  posting.rs  posting_line.rs  posting_status.rs  posting_trace.rs  posting_type.rs  stmt_status.rs
postings-api/src/service/: account_stmt_service.rs  chart_of_account_service.rs  ledger_service.rs  mod.rs  named_service.rs  posting_service.rs
postings-db/: Cargo.toml
postings-db-mariadb/: Cargo.toml
postings-db-mariadb/migrations/: 20231027120000_initial_schema.sql  20250718120000_change_record_user_to_binary.sql  20250718120001_change_opr_fields_to_binary.sql  20250718120002_change_hash_fields_to_binary.sql  20250718120003_decouple_named_entity.sql  20250719140000_add_context_to_named.sql  20250720000000_consolidated_schema.sql
postings-db-mariadb/src/models/: chart_of_account.rs  ledger.rs  mod.rs  named.rs  posting.rs  posting_line.rs  posting_trace.rs
postings-db-mariadb/src/repositories/: account_stmt_repository.rs  chart_of_account_repository.rs  ledger_account_repository.rs  ledger_repository.rs  named_repository.rs  posting_line_repository.rs  posting_repository.rs  posting_trace_repository.rs
postings-db-postgres/: Cargo.toml
postings-db-postgres/migrations/: 20231027120000_initial_schema.sql  20231027120001_posting_trace.sql  20250720000000_consolidated_schema.sql
postings-db-postgres/src/repositories/: account_stmt_repository.rs  chart_of_account_repository.rs  ledger_account_repository.rs  ledger_repository.rs  mod.rs  named_repository.rs  posting_line_repository.rs  posting_repository.rs  posting_trace_repository.rs
postings-db/src/: lib.rs
postings-db/src/models/: account_category.rs  account_stmt.rs  balance_side.rs  chart_of_account.rs  ledger.rs  ledger_account.rs  mod.rs  named.rs  operation_details.rs  posting.rs  posting_line.rs  posting_status.rs  posting_trace.rs  posting_type.rs  stmt_status.rs
postings-db/src/repositories/: account_stmt_repository.rs  chart_of_account_repository.rs  ledger_account_repository.rs  ledger_repository.rs  mod.rs  named_repository.rs  posting_line_repository.rs  posting_repository.rs  posting_trace_repository.rs
postings-logic/: Cargo.toml
postings-logic/src/: hash_utils.rs  lib.rs
postings-logic/src/caching/: chart_of_account_repository.rs  mod.rs
postings-logic/src/mappers/: account_stmt.rs  chart_of_account.rs  ledger.rs  ledger_account.rs  mod.rs  named.rs  posting.rs  posting_line.rs  posting_trace.rs
postings-logic/src/services/: account_stmt_service.rs  chart_of_account_service.rs  ledger_service.rs  mod.rs  named_service.rs  posting_service.rs  shared_service.rs
postings-logic/tests/: account_stmt_it.rs  caching_it.rs  chart_of_account_it.rs  db_connection_it.rs  ledger_it.rs  mariadb_basic_test.rs  mariadb_debug_test.rs  posting_it.rs
postings-logic/tests/data/: coa_test_data.yml
