[package]
name = "postings-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
