[package]
name = "postings-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["hex"] }
strum = "0.25.0"
strum_macros = "0.25.3"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
thiserror = "1.0"
type-rules = { version = "0.2.3", features = ["derive", "regex"] }
type-rules-derive = "0.2.3"

[dev-dependencies]
rstest = "0.18.2"
