[package]
name = "postings-db-mariadb"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-db = { path = "../postings-db" }
sqlx = { version = "0.7", features = ["mysql", "chrono", "bigdecimal"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }