[package]
name = "postings-db-mariadb"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-db = { path = "../postings-db" }
sqlx = { version = "0.8.1", features = ["mysql", "chrono", "bigdecimal"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }