[package]
name = "postings-db-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-db = { path = "../postings-db" }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal", "uuid"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
