[package]
name = "postings-db"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-api = { path = "../postings-api" }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = ["runtime-tokio-rustls", "bigdecimal", "uuid"]
