[package]
name = "postings-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-api = { path = "../postings-api" }
postings-db = { path = "../postings-db" }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "macros", "postgres", "chrono" ] }
postings-db-postgres = { path = "../postings-db-postgres" }
uuid = { version = "1.3", features = ["v4", "serde"] }
dotenvy = "0.15"
env_logger = "0.10"
