[package]
name = "postings-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
postings-api = { path = "../postings-api" }
postings-db = { path = "../postings-db" }
postings-db-postgres = { path = "../postings-db-postgres", optional = true }
postings-db-mariadb = { path = "../postings-db-mariadb", optional = true }
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.31"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
cached = { version = "0.49.2", features = ["async", "proc_macro"] }
moka = { version = "0.12.1", features = ["future"] }
sha2 = "0.10.8"
bigdecimal = { version = "0.3.1", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "macros", "mysql", "postgres", "uuid", "chrono", "bigdecimal"] }
serde_yaml = "0.9.27"
dotenvy = "0.15.7"
env_logger = "0.10.1"
mockall = "0.12.1"

[features]
mariadb_tests = ["postings-db-mariadb"]
postgres_tests = ["postings-db-postgres"]
